# plotter

./: .gitignore  README.md  build_template.py  environment.yml  pyproject.toml  useful_snippets.md
notebooks/: 01-am-plot_shearers_method.ipynb  02-am-solve_characteristics_shearers.ipynb
src/: file_utils.py  log_utils.py  np_utils.py
src/params/: __init__.py  values.py
